--- a/css/uno.css
+++ b/css/uno.css
@@ -1,4 +1,4 @@
-@import 'https://fonts.googleapis.com/css?family=Raleway:400,700|Roboto+Slab:300,400)';
+/*@import 'https://fonts.googleapis.com/css?family=Raleway:400,700|Roboto+Slab:300,400)';*/
 /* http://meyerweb.com/eric/tools/css/reset/
 	 v2.0 | 20110126
 	 License: none (public domain)
@@ -1104,14 +1104,18 @@ pre {
 
 .content-wrapper__inner {
 	margin: 0 10%;
-	padding: 50px 0; }
+	padding: 50px 0;
+	width: 100%;
+}
 
 .footer {
 	display: block;
 	padding: 2em 0 0 0;
 	border-top: 2px solid #dddddd;
 	font-size: .7em;
-	color: #b3b3b3; }
+	color: #b3b3b3;
+	width: 100%;
+}
 
 .footer__copyright {
 	display: block;
