--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ pre.highlight code,
 }
 
 .footer__copyright {
-    margin: 0 20px 10px;
+    margin-bottom: 15px;
   text-align: center;
 }
 
@@ -54,4 +54,14 @@ pre.highlight code,
   height: 100px;
   border: 3px solid #fff;
   border-radius:100%;
+}
+
+.content-wrapper__inner {
+  margin-right: 5%;
+  margin-left: 5%;
+}
+.footer {
+  padding: 15px 0 0 0;
+  margin-left: 5%;
+  margin-right: 5%;
 }
