--- a/css/uno.css
+++ b/css/uno.css
@@ -1219,7 +1219,9 @@ hr {
 
 .panel-cover--collapsed {
 	width: 40%;
-	max-width: 530px; }
+	/*max-width: 530px;*/
+	max-width: 460px;
+}
 
 .panel-cover--overlay {
 	display: block;
@@ -1254,7 +1256,9 @@ hr {
 
 .no-js .panel-main {
 	width: 40%;
-	max-width: 530px; }
+	/*max-width: 530px; */
+	max-width: 460px;
+}
 
 .panel-main__inner {
 	display: table-cell;
@@ -1565,7 +1569,10 @@ input[type="tel"] {
 
 @media all and (min-width: 1300px) {
 	.content-wrapper {
-		margin-left: 530px; } }
+		/*margin-left: 530px; */
+		margin-left: 460px;
+	}
+}
 @media all and (max-width: 1100px) {
 	.panel-cover__logo {
 		width: 70px; }
