修复baidu统计失效的问题

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -65,4 +65,17 @@
 	{% if page.layout == 'post' %}
 	<link rel="stylesheet" href="{{ relativebase }}assets/css/highlighter/{{ site.highlight_theme }}.css">
 	{% endif %}
+
+  {% if site.baidu_analytics %}
+	<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?{{site.baidu_analytics}}";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+	{% endif %}
+  
 </head>
