屏幕尺寸到1200px时，文章右侧的toc显示滑块的问题

--- a/assets/css/scratch.css
+++ b/assets/css/scratch.css
@@ -95,7 +95,7 @@ aside.toc {
     }
     .toc-content{
         max-height: calc(100vh - 7em);
-        overflow: scroll;
+        /* overflow: scroll; */
         border-bottom-color: var(--blue);
         border-bottom-style: solid;
         background-color: var(--grey5);
