--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,8 @@ layout: default
   <article class="page" itemscope itemtype="https://schema.org/CreativeWork">
     {% include schema-meta.html %}
     <div class="page-image">
-      <div class="cover-image" style="background: url('{{ relativebase }}assets/img/{{ page.img | default: site.plugins.page_background }}') center no-repeat; background-size: cover;"></div>
+      {{ page.img | default: site.extensions.page_background }}
+      <div class="cover-image" style="background: url('{{ relativebase }}assets/img/{{ page.img | default: site.extensions.page_background }}') center no-repeat; background-size: cover;"></div>
     </div>
     <div class="wrapper">
       <div class="page-content">
