--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -325,7 +325,7 @@
   </script>
 {% endif %}
 
-{%- if site.plugins.mermaid_enable and page.mermaid -%}  
+{%- if site.extensions.mermaid_enable and page.mermaid -%}  
   <script type="text/javascript" src="/assets/js/mermaid.min.js"></script>
   <script type="text/javascript">
     (function () {
