--- a/_includes/post_meta.html
+++ b/_includes/post_meta.html
@@ -10,8 +10,9 @@
   {% unless include.date == "none" %}
     {% if document.show_date and document.date %}
       {% assign date = document.date %}
+      {% assign date_formater = site.extensions.date_format | default : "%B %-d, %Y" %}
       <{% if include.type == "recent-item-meta" %}p{% else %}span{% endif %} class="page_meta-date">
-        <time datetime="{{ date | date_to_xmlschema }}">{{ date | date: "%B %-d, %Y" }}</time>
+        <time datetime="{{ date | date_to_xmlschema }}">{{ date | date: date_formater }}</time>
       </{% if include.type == "recent-item-meta" %}p{% else %}span{% endif %}>
     {% endif %}
     {% unless include.type == "recent-item-meta" %}
