--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang='{{ site.locale | default : en }}'>
   {% include head.html %}
   <body>
     {{ content }}
