--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -2,14 +2,12 @@
     <div class="comment-wrapper">
         {% if site.comments == 'utteranc' %}
         {% if site.comments_opts.repo %}
-        <script src="{{ relativebase }}assets/js/utteranc.js" repo="{{ site.comments_opts.repo }}"
+        <!-- TODO: TINYZ remove the remote js file dep -->
+        <script src="https://utteranc.es/client.js" repo="{{ site.comments_opts.repo }}"
             issue-term="{{ site.comments_opts.issue_term | default : title }}"
             label="{{ site.comments_opts.label | default : comments }}" theme="{{ site.comments_opts.theme | default : github-light }}"
             crossorigin="anonymous" async>
             </script>
-        <div class="utterances">
-            <iframe class="utterances-frame"></iframe>
-        </div>
         {% endif %}
         {% elsif site.comments == 'disqus' and site.comments_opts.discus_identifier %}
         {% if site.comments.comments_curtain %}
