--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
       <a  class="post-list-title" href="{{ post_url }}">{{ page.title }}</a>
       {% include post_meta.html type="post-card-meta" %}
         <div class="post-excerpt">
-            {{ page.excerpt }}<a class="read-more" href="{{ post_url }}"> read more</a>
+            {{ page.excerpt }}<a class="read-more" href="{{ post_url }}"> {{ site.data.ui-text[site.locale].read_more | default: 'read more' }}</a>
         </div>
   </div>
 </section>
