--- a/_includes/clickable-image.html
+++ b/_includes/clickable-image.html
@@ -1,4 +1,5 @@
-{% if {{ site.extensions.image_scaling | default : true }} and page.image_scaling %}
+{% assign image_scaling_enable = site.extensions.image_scaling | default : true %}
+{% if image_scaling_enable and page.image_scaling %}
 
 <style>@import url("{{ '{{ relativebase }}assets/css/clickable-image.css' | relative_url }}");</style>
 
