--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -141,7 +141,10 @@
 
     $(function () {
       if (document.getElementById('comment-curtain') == null){
-        document.getElementById('disqus_thread').classList.toggle('show')
+        var disqusThread = document.getElementById('disqus_thread')
+        if (disqusThread) {
+          disqusThread.classList.toggle('show')
+        }
       }
 
       var tweetTags = document.getElementsByTagName("tweet");
