--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,15 +1,5 @@
 <section class="comment-area">
     <div class="comment-wrapper">
-        {% if site.comments == 'utteranc' %}
-        {% if site.comments_opts.repo %}
-        <!-- TODO: TINYZ remove the remote js file dep -->
-        <script src="https://utteranc.es/client.js" repo="{{ site.comments_opts.repo }}"
-            issue-term="{{ site.comments_opts.issue_term | default : title }}"
-            label="{{ site.comments_opts.label | default : comments }}" theme="{{ site.comments_opts.theme | default : github-light }}"
-            crossorigin="anonymous" async>
-            </script>
-        {% endif %}
-        {% elsif site.comments == 'disqus' and site.comments_opts.discus_identifier %}
         {% if site.comments.comments_curtain %}
         <div class="row" id="comment-curtain">
             <div class="col-lg-8 col-sm-10 mr-auto ml-auto">
@@ -20,16 +10,27 @@
             </div>
         </div>
         {% endif %}
-        <div id="disqus_thread"></div>
-        <script>
-            (function () {
-                var d = document, s = d.createElement('script');
-                s.src = '//{{ site.comments.discus_identifier }}.disqus.com/embed.js';
-                s.setAttribute('data-timestamp', +new Date());
-                (d.head || d.body).appendChild(s);
-            })();
-        </script>
-        <noscript>Please enable JavaScript to view the comments.</noscript>
+
+        {% if site.comments == 'utteranc' %}
+            {% if site.comments_opts.repo %}
+            <!-- TODO: TINYZ remove the remote js file dep -->
+            <script src="https://utteranc.es/client.js" repo="{{ site.comments_opts.repo }}"
+                issue-term="{{ site.comments_opts.issue_term | default : title }}"
+                label="{{ site.comments_opts.label | default : comments }}" theme="{{ site.comments_opts.theme | default : github-light }}"
+                crossorigin="anonymous" async>
+                </script>
+            {% endif %}
+        {% elsif site.comments == 'disqus' and site.comments_opts.discus_identifier %}
+            <div id="comment-layout"></div>
+            <script>
+                (function () {
+                    var d = document, s = d.createElement('script');
+                    s.src = '//{{ site.comments.discus_identifier }}.disqus.com/embed.js';
+                    s.setAttribute('data-timestamp', +new Date());
+                    (d.head || d.body).appendChild(s);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the comments.</noscript>
         {% endif %}
     </div>
 </section> <!-- End Comment Area -->
