--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -13,12 +13,14 @@
 
         {% if site.comments == 'utteranc' %}
             {% if site.comments_opts.repo %}
-            <!-- TODO: TINYZ remove the remote js file dep -->
-            <script src="https://utteranc.es/client.js" repo="{{ site.comments_opts.repo }}"
-                issue-term="{{ site.comments_opts.issue_term | default : title }}"
-                label="{{ site.comments_opts.label | default : comments }}" theme="{{ site.comments_opts.theme | default : github-light }}"
-                crossorigin="anonymous" async>
+            <div id="comment-layout">
+                <!-- TODO: TINYZ remove the remote js file dep -->
+                <script src="https://utteranc.es/client.js" repo="{{ site.comments_opts.repo }}"
+                    issue-term="{{ site.comments_opts.issue_term | default : title }}"
+                    label="{{ site.comments_opts.label | default : comments }}" theme="{{ site.comments_opts.theme | default : github-light }}"
+                    crossorigin="anonymous" async>
                 </script>
+            </div>
             {% endif %}
         {% elsif site.comments == 'disqus' and site.comments_opts.discus_identifier %}
             <div id="comment-layout"></div>
