--- a/assets/css/sass/_main.scss
+++ b/assets/css/sass/_main.scss
@@ -1,16 +1,20 @@
 ---
 ---
+
 @import "variables";
 @import "syntax";
 @import "tools/normalize";
 
 /* = = = = = = = = = = Main Styles = = = = = = = = = = */
 
-*, *::after, *::before {
+*,
+*::after,
+*::before {
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100%;
   overflow-x: hidden;
 }
@@ -20,7 +24,7 @@ html {
 }
 
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: $dark-gray;
   margin: 0;
   background-color: $white;
@@ -29,8 +33,13 @@ body {
   -webkit-overflow-scrolling: touch;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Lato', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Lato", sans-serif;
   color: $dark-purple;
   font-weight: 400;
 }
@@ -67,7 +76,7 @@ pre {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  transition: transform .4s cubic-bezier(0.16, 0.68, 0.43, 0.99);
+  transition: transform 0.4s cubic-bezier(0.16, 0.68, 0.43, 0.99);
 }
 
 .flex-container.active {
@@ -80,7 +89,7 @@ pre {
     bottom: 0;
     left: 0;
     z-index: 2;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
   }
 }
 
@@ -105,7 +114,8 @@ pre {
   color: #ffffff;
 }
 
-.clearfix::before, .clearfix::after {
+.clearfix::before,
+.clearfix::after {
   content: "";
   display: table;
   clear: both;
@@ -126,7 +136,6 @@ pre {
 
 /* = = = = = = = = = = Pagination Styles = = = = = = = = = = */
 @import "parts/pagination";
-
 
 /* = = = = = = = = = = Footer Styles = = = = = = = = = = */
 @import "parts/footer";
