--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -23,90 +23,90 @@
     var themeData = loadThemeData();
 
     function saveThemeData(data) {
-    storage.setItem('theme', JSON.stringify(data));
+      storage.setItem('theme', JSON.stringify(data));
     }
 
     function loadThemeData() {
-    var data = storage.getItem('theme');
-    try {
-        data = JSON.parse(data ? data : '');
-    } catch(e) {
-        data = { nightShift: undefined, autoToggleAt: 0 };
-        saveThemeData(data);
-    }
-    return data;
+      var data = storage.getItem('theme');
+      try {
+          data = JSON.parse(data ? data : '');
+      } catch(e) {
+          data = { nightShift: undefined, autoToggleAt: 0 };
+          saveThemeData(data);
+      }
+      return data;
     }
 
     function handleThemeToggle(nightShift) {
-    themeData.nightShift = nightShift;
-    saveThemeData(themeData);
-    html.dataset.theme = nightShift ? 'dark' : 'light';
-    if (nightShift) {
-        logo.setAttribute("src", "{{ logo_url_dark }}");
-    } else {
-        logo.setAttribute("src", "{{ logo_url }}");
-    }
-    setTimeout(function() {
-        sw.checked = nightShift ? true : false;
-    }, 50);
+      themeData.nightShift = nightShift;
+      saveThemeData(themeData);
+      html.dataset.theme = nightShift ? 'dark' : 'light';
+      if (nightShift) {
+          logo.setAttribute("src", "{{ logo_url_dark }}");
+      } else {
+          logo.setAttribute("src", "{{ logo_url }}");
+      }
+      setTimeout(function() {
+          sw.checked = nightShift ? true : false;
+      }, 50);
     }
 
     function autoThemeToggle() {
-    // Next time point of theme toggle
-    var now = new Date();
-    var toggleAt = new Date();
-    var hours = now.getHours();
-    var nightShift = hours >= 19 || hours <=7;
+      // Next time point of theme toggle
+      var now = new Date();
+      var toggleAt = new Date();
+      var hours = now.getHours();
+      var nightShift = hours >= 19 || hours <=7;
 
-    if (nightShift) {
-        if (hours > 7) {
-        toggleAt.setDate(toggleAt.getDate() + 1);
-        }
-        toggleAt.setHours(7);
-    } else {
-        toggleAt.setHours(19);
-    }
+      if (nightShift) {
+          if (hours > 7) {
+            toggleAt.setDate(toggleAt.getDate() + 1);
+          }
+          toggleAt.setHours(7);
+      } else {
+          toggleAt.setHours(19);
+      }
 
-    toggleAt.setMinutes(0);
-    toggleAt.setSeconds(0);
-    toggleAt.setMilliseconds(0)
+      toggleAt.setMinutes(0);
+      toggleAt.setSeconds(0);
+      toggleAt.setMilliseconds(0)
 
-    var delay = toggleAt.getTime() - now.getTime();
+      var delay = toggleAt.getTime() - now.getTime();
 
-    // auto toggle theme mode
-    setTimeout(function() {
-        handleThemeToggle(!nightShift);
-    }, delay);
+      // auto toggle theme mode
+      setTimeout(function() {
+          handleThemeToggle(!nightShift);
+      }, delay);
 
-    return {
-        nightShift: nightShift,
-        toggleAt: toggleAt.getTime()
-    };
+      return {
+          nightShift: nightShift,
+          toggleAt: toggleAt.getTime()
+      };
     }
 
     // Listen the theme toggle event
     sw.addEventListener('change', function(event) {
-    handleThemeToggle(event.target.checked);
+      handleThemeToggle(event.target.checked);
     });
 
     if (nightModeOption == 'auto') {
-    var data = autoThemeToggle();
+      var data = autoThemeToggle();
 
-    // Toggle theme by local setting
-    if (data.toggleAt > themeData.autoToggleAt) {
-        themeData.autoToggleAt = data.toggleAt;
-        handleThemeToggle(data.nightShift);
-    } else {
-        handleThemeToggle(themeData.nightShift);
-    }
+      // Toggle theme by local setting
+      if (data.toggleAt > themeData.autoToggleAt) {
+          themeData.autoToggleAt = data.toggleAt;
+          handleThemeToggle(data.nightShift);
+      } else {
+          handleThemeToggle(themeData.nightShift);
+      }
     } else if (nightModeOption == 'manual') {
-    handleThemeToggle(themeData.nightShift);
+      handleThemeToggle(themeData.nightShift);
     } else {
-    var nightShift = themeData.nightShift;
-    if (nightShift === undefined) {
-        nightShift = nightModeOption === 'on';
-    }
-    handleThemeToggle(nightShift);
+      var nightShift = themeData.nightShift;
+      if (nightShift === undefined) {
+          nightShift = nightModeOption === 'on';
+      }
+      handleThemeToggle(nightShift);
     }
 })();
 </script>
@@ -336,7 +336,7 @@
 {% endif %}
 
 {%- if site.extensions.mermaid_enable and page.mermaid -%}  
-  <script type="text/javascript" src="/assets/js/mermaid.min.js"></script>
+  <script type="text/javascript" src="{{ relativebase }}/assets/js/mermaid.min.js"></script>
   <script type="text/javascript">
     (function () {
       var config = {
