--- a/assets/css/sass/syntax.scss
+++ b/assets/css/sass/syntax.scss
@@ -25,8 +25,46 @@ html[data-theme="dark"] {
 }
 
 // 自定义样式
+.code-header {
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 2.25rem;
+  background: var(--grey1);
+}
+.code-header::before {
+  content: "";
+  display: inline-block;
+  margin-left: 1rem;
+  width: 0.75rem;
+  height: 0.75rem;
+  border-radius: 50%;
+  background-color: var(--grey5);
+  box-shadow: 1.25rem 0 0 var(--grey5), 2.5rem 0 0 var(--grey5);
+}
+.fa-code:before {
+  color: var(--grey5);
+}
+.code-header span::after {
+  content: attr(label-text);
+  font-size: 0.85rem;
+  font-weight: 600;
+  color: var(--grey5);
+}
+.code-header button {
+  border: 1px solid transparent;
+  border-radius: 6px;
+  height: 2.25rem;
+  width: 2.25rem;
+  padding: 0;
+  background-color: inherit;
+}
+
 .highlight {
   line-height: 1.25;
+  // border-radius: 6px;
 }
 .highlight pre {
   padding: 0;
@@ -35,6 +73,9 @@ html[data-theme="dark"] {
 }
 .highlight pre .lineno {
   min-width: 1.45rem;
+}
+.highlight table {
+  border-left: none;
 }
 .highlight table td {
   padding: 1px;
