--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,9 +3,9 @@
         {% if site.comments and site.comments_opts.comments_curtain %}
         <div class="row" id="comment-curtain">
             <div class="col-lg-8 col-sm-10 mr-auto ml-auto">
-                <h2 class="page-subtitle">Comments</h2>
+                <h2 class="page-subtitle">{{ site.data.ui-text[site.locale].title_comments | default : 'Comments' }}</h2>
                 <div class="comments-trigger" onClick="toggle_comments()">
-                    <i class="fa fa-comments"></i>&nbsp;&nbsp;Write a comment ...
+                    <i class="fa fa-comments"></i>&nbsp;&nbsp;{{ site.data.ui-text[site.locale].write_comment | default : 'Write a comment ...' }}
                 </div>
             </div>
         </div>
