--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,6 +30,7 @@ layout: default
         {% if page.toc %}{% include sidebar-toc.html %}{% endif %}
         {% include github-button.html %}
         {{page.content | markdownify}}
+        {% if site.extensions.post_copyright %}{% include copyright.html %}{% endif %}
         {% include sidebar.html context="post" class="inline" id="post-end" %}
         <div class="separator"></div>
         {% include author-box.html %}
