--- a/_includes/copyright.html
+++ b/_includes/copyright.html
@@ -3,6 +3,7 @@
     <img alt="知识共享许可协议" src="{{ relativebase }}assets/img/by-nc-sa.svg">
   </a>
 </p>
+{% if site.locale == 'zh' %}
 <p>
   本作品采用 <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">知识共享署名-非商业性使用-相同方式共享 4.0 国际许可协议</a>
   进行许可。欢迎转载、使用、重新发布，但务必保留文章署名 <strong>{{ site.author }}</strong> （包含链接： <a
@@ -10,3 +11,4 @@
   ），不得用于商业目的，基于本文修改后的作品务必以相同的许可发布。
   {% if site.email %} 如有任何疑问，请 <a href="mailto:{{ site.email }}">与我联系 ({{ site.email }})</a> 。{% endif %}
 </p>
+{% endif %}
