mermaid的theme修改forest. 避免深色模式线段不显示
临时方案。继续优化为跟随系统变化

--- a/_includes/javascripts.html
+++ b/_includes/javascripts.html
@@ -341,11 +341,12 @@
     (function () {
       var config = {
         startOnLoad: true,
-        darkMode: true
+        theme: 'forest',
+        darkMode: false
       };
       mermaid.initialize(config);
       window.mermaid.init(undefined, document.querySelectorAll('pre code.language-mermaid'));
-    })()
+    })();
   </script>
 {%- endif -%}
 
