--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -602,6 +602,7 @@ svg {
 }
 .main-header .logo {
   width: 80%;
+  height: 90px;
   position: relative;
   text-align: center;
   color: var(--main);
@@ -2059,6 +2060,7 @@ a.read-more:hover {
 @media only screen and (max-width: 768px) {
   .main-header .logo {
     width: 90%;
+    height: 90px;
   }
   .main-header .logo a {
     font-size: 24px;
@@ -2114,6 +2116,7 @@ a.read-more:hover {
   }
   .main-header .logo {
     width: 100%;
+    height: 60px;
   }
   .main-header .logo a {
     font-size: 21px;
