--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -312,10 +312,17 @@ textarea {
  * 2. Remove the padding in IE 10.
  */
 
-[type="checkbox"],
 [type="radio"] {
   box-sizing: border-box; /* 1 */
   padding: 0; /* 2 */
+}
+
+[type="checkbox"] {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0px 2px 0px 0px;
+  width: 18px;
+  height: 18px;
 }
 
 /**
