--- a/_includes/recent-post.html
+++ b/_includes/recent-post.html
@@ -8,7 +8,7 @@
         <div class="recent-item">
           {% include escape-404.html %}
           {% include remove_double_slash.html %}
-          <a href="{{ post_url }}" class="recent-item-img" style="background: url('{{ relativebase }}assets/img/{{ post.img | default: site.extensions.page_background }}') center no-repeat; background-size: cover;">
+          <a href="{{ post_url }}" class="recent-item-img" style="background: url('{{ relativebase }}{{ post.img | default: site.extensions.page_background }}') center no-repeat; background-size: cover;">
             <div class="recent-item-title">
               <span>{{ post.title }}</span>
               {% include post_meta.html type="recent-item-meta" date="none" %}
