--- a/assets/css/sass/syntax.scss
+++ b/assets/css/sass/syntax.scss
@@ -64,7 +64,8 @@ html[data-theme="dark"] {
 
 .highlight {
   line-height: 1.25;
-  // border-radius: 6px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
 }
 .highlight pre {
   padding: 0;
